--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -11,4 +11,13 @@
   <% end %>
 </div>
 
-<%= link_to "New project", new_project_path %>
+<% if user_signed_in? %>
+  <%= link_to "New project", new_project_path %>
+<% else %>
+  <%= link_to "Sign in", user_session_path %>
+<% end %>
+
+
+
+
+
