--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,42 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-  </head>
+  </head>  
 
   <body>
+  <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+    
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/projects">CS3300 Travis Bossio</a>
+      <ul class="navbar-nav me-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="/projects">Projects</a>
+      </li>
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#example"> 
+      <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <% if !user_signed_in? %>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/sign_in">Sign In</a>
+        </li>
+        <li class="nav-item">
+         <a class="nav-link" href="users/sign_up">Sign Up</a>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Sign Out", destroy_user_session_path, :method => :delete, class: "nav-item nav-link" %>
+        </li>
+      <% end %>
+      </ul>
+    </div>
+    </div>
+  </nav>
+
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
