--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,43 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
-
-<div class="container-fluid">
-  <a class="navbar-brand" href="/projects">CS3300 Travis Bossio</a>
-  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="mynavbar">
-    <ul class="navbar-nav me-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/projects">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/">About</a>
-      </li>
-      <% if !user_signed_in? %>
-        <li class="nav-item">
-          <a class="nav-link" href="/users/sign_in">Sign In</a>
-        </li>
-        <li class="nav-item">
-         <a class="nav-link" href="users/sign_up">Sign Up</a>
-        </li>
-      <% else %>
-        <li class="nav-item">
-          <%= link_to "Sign Out", destroy_user_session_path, :method => :delete, class: "nav-item nav-link" %>
-        </li>
-      <% end %>
-    </ul>
-    <form class="d-flex">
-      <input class="form-control me-2" type="text" placeholder="Search">
-      <button class="btn btn-primary" type="button">Search</button>
-    </form>
-  </div>
-</div>
-
-</nav>
-
 <p style="color: green"><%= notice %></p>
 
 <h1>Projects</h1>
@@ -51,6 +14,12 @@
     <p>
       <%= link_to "Show this project", project %>
     </p>
+  <% end %>
+</div>
+
+<div id="new_project">
+  <% if user_signed_in? %>
+    <%= link_to "Add New Project", new_project_url %>
   <% end %>
 </div>
 
