--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,23 @@
+
+<div class="text-center p-5">
+
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <form>
+  <div class="form-group p-4">
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <br/>
+    <small id="emailHelp" class="form-text text-muted">We will send reset instructions to this email</small>
   </div>
+    <div class="actions">
+    <%= f.submit "Reset" %>
+  </div>
+  </form>
 
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
