--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,7 @@
-<h2>Sign up</h2>
-
+<div class ="text-center">
+<div class ="pt-5 pb-3">
+  <h2>Sign Up</h2>
+</div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
@@ -21,10 +23,10 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
+  <div class="actions pt-3">
     <%= f.submit "Sign up" %>
-    <p>User Signed up</p>
+
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
