bootstrapped new project page

--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,9 +1,9 @@
+<div class ="text-center">
+<div class ="pt-5 pb-3">
 <h1>New project</h1>
+</div>
+
 
 <%= render "form", project: @project %>
 
-<br>
-
-<div>
-  <%= link_to "Back to projects", projects_path %>
 </div>
